--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cron": "^3.1.7",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "node-cron": "^3.0.3",
